--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@vue/cli-plugin-typescript": "~4.5.6",
     "@vue/cli-plugin-vuex": "~4.5.6",
     "@vue/cli-service": "~4.5.6",
-    "@vue/composition-api": "^1.0.0-beta.14",
+    "@vue/composition-api": "^1.0.0-rc.1",
     "@vue/eslint-config-typescript": "^5.1.0",
     "babel-plugin-import": "^1.13.0",
     "eslint": "^7.9.0",
@@ -34,7 +34,7 @@
     "postcss-pxtorem": "^5.1.1",
     "sass": "^1.26.11",
     "sass-loader": "^10.0.2",
-    "typescript": "~4.0.3",
+    "typescript": "~4.1.3",
     "vue-template-compiler": "^2.6.12",
     "webpack-bundle-analyzer": "^3.9.0"
   }
