--- a/package.json
+++ b/package.json
@@ -11,31 +11,31 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "core-js": "^3.13.1",
-    "vant": "^2.12.20",
-    "vue": "^2.6.13",
-    "vue-router": "^3.5.1",
+    "core-js": "^3.16.1",
+    "vant": "^2.12.25",
+    "vue": "^2.6.14",
+    "vue-router": "^3.5.2",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.26.0",
-    "@typescript-eslint/parser": "^4.26.0",
+    "@typescript-eslint/eslint-plugin": "^4.29.1",
+    "@typescript-eslint/parser": "^4.29.1",
     "@vue/cli-plugin-babel": "~4.5.13",
     "@vue/cli-plugin-eslint": "~4.5.13",
     "@vue/cli-plugin-router": "~4.5.13",
     "@vue/cli-plugin-typescript": "~4.5.13",
     "@vue/cli-plugin-vuex": "~4.5.13",
     "@vue/cli-service": "~4.5.13",
-    "@vue/composition-api": "^1.0.0-rc.10",
+    "@vue/composition-api": "^1.1.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "babel-plugin-import": "^1.13.3",
-    "eslint": "^7.27.0",
-    "eslint-plugin-vue": "^7.10.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^7.16.0",
     "postcss-pxtorem": "^6.0.0",
-    "sass": "^1.34.0",
-    "sass-loader": "^12.0.0",
-    "typescript": "~4.3.2",
-    "vue-template-compiler": "^2.6.13",
+    "sass": "^1.37.5",
+    "sass-loader": "^12.1.0",
+    "typescript": "~4.3.5",
+    "vue-template-compiler": "^2.6.14",
     "webpack-bundle-analyzer": "^4.4.2"
   }
 }
